compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_complex_real_literal-9.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "a := 3.339068557571188581835713701280943911923401916998521771655656997328440314559615318168849149074662609099998113009465566426808170378434065722991659642619467706034884424989741080790766778456332168200464651593995817371782125010668346652995912233993254584461125868481633343674905074271064409763090708017856584019776878812425312008812326260363035474811532236853359905334625575404216060622858633280744301892470300555678734689978476870369853549413277156622170245846166991655321535529623870646888786637528995592800436177901746286272273374471701452991433047257863864601424252024791567368195056077320885329384322332391564645264143400798619665040608077549162173963649264049738362290606875883456826586710961041737908872035803481241600376705491726170293986797332763671875E-319"

---
database:
nodes:
HirId(Idx::<HirNode>(0)) (Span { file: None, range: 0..1 }): Expr(Name(Name(UseId(DefId(0), 0))))
HirId(Idx::<HirNode>(1)) (Span { file: None, range: 5..768 }): Expr(Literal(Real(0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000333904)))
HirId(Idx::<HirNode>(2)) (Span { file: None, range: 0..768 }): Stmt(Assign(Assign { lhs: ExprId(HirId(Idx::<HirNode>(0))), op: Spanned(None, Span { file: None, range: 2..4 }), rhs: ExprId(HirId(Idx::<HirNode>(1))) }))
HirId(Idx::<HirNode>(3)) (Span { file: None, range: 0..768 }): Unit(Unit { id: UnitId(HirId(Idx::<HirNode>(3))), stmts: [StmtId(HirId(Idx::<HirNode>(2)))], symbol_table: SymbolTable { defs: {DefId(0): Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 }}, def_spans: {DefId(0): Span { file: None, range: 0..1 }}, use_spans: {UseId(DefId(0), 0): Span { file: None, range: 0..1 }}, next_def: 1 } })

root stmts:
[StmtId(HirId(Idx::<HirNode>(2)))]
symtab:
DefId(0): (Span { file: None, range: 0..1 }, Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 })
UseId(DefId(0), 0): Span { file: None, range: 0..1 }

