compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_get_stmt-2.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "get skip, a, b : 1, c : *"

---
database:
nodes:
HirId(Idx::<HirNode>(0)) (Span { file: None, range: 10..11 }): Expr(Name(Name(UseId(DefId(0), 0))))
HirId(Idx::<HirNode>(1)) (Span { file: None, range: 13..14 }): Expr(Name(Name(UseId(DefId(1), 0))))
HirId(Idx::<HirNode>(2)) (Span { file: None, range: 17..18 }): Expr(Literal(Integer(1)))
HirId(Idx::<HirNode>(3)) (Span { file: None, range: 20..21 }): Expr(Name(Name(UseId(DefId(2), 0))))
HirId(Idx::<HirNode>(4)) (Span { file: None, range: 0..25 }): Stmt(Get(Get { stream_num: None, items: [Skip, Item(GetItem { expr: ExprId(HirId(Idx::<HirNode>(0))), width: Token }), Item(GetItem { expr: ExprId(HirId(Idx::<HirNode>(1))), width: Chars(ExprId(HirId(Idx::<HirNode>(2)))) }), Item(GetItem { expr: ExprId(HirId(Idx::<HirNode>(3))), width: Line })] }))
HirId(Idx::<HirNode>(5)) (Span { file: None, range: 0..25 }): Unit(Unit { id: UnitId(HirId(Idx::<HirNode>(5))), stmts: [StmtId(HirId(Idx::<HirNode>(4)))], tracked_defs: [DefId(0), DefId(1), DefId(2)], tracked_uses: [UseId(DefId(0), 0), UseId(DefId(1), 0), UseId(DefId(2), 0)] })

root stmts:
[StmtId(HirId(Idx::<HirNode>(4)))]
symtab:
DefId(0): (Span { file: None, range: 10..11 }, Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 })
DefId(1): (Span { file: None, range: 13..14 }, Symbol { name: "b", kind: Undeclared, is_pervasive: false, def_id: DefId(1), next_use: 1 })
DefId(2): (Span { file: None, range: 20..21 }, Symbol { name: "c", kind: Undeclared, is_pervasive: false, def_id: DefId(2), next_use: 1 })
UseId(DefId(0), 0): Span { file: None, range: 10..11 }
UseId(DefId(1), 0): Span { file: None, range: 13..14 }
UseId(DefId(2), 0): Span { file: None, range: 20..21 }

