compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_get_stmt-3.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: get

---
database:
stmt:

expr:

ty:

root stmts:
[]
symtab:

