compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_int_radix_literal-2.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "a := 10#99999999999999999999"

---
database:
stmt:
Idx::<Stmt>(0) (0..28): Assign(Assign { lhs: Idx::<Expr>(0), op: Spanned(None, 2..4), rhs: Idx::<Expr>(1) })

expr:
Idx::<Expr>(0) (0..1): Name(Name(UseId(DefId(0), 0)))
Idx::<Expr>(1) (5..28): Literal(Integer(0))

ty:

root stmts:
[Idx::<Stmt>(0)]
symtab:
DefId(0): (0..1, Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 })
UseId(DefId(0), 0): 0..1
error at 5..28: explicit int literal is too large

